--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,14 @@ yapf = "^0.32.0"
 mypy = "^0.971"
 flake8 = "^5.0.4"
 pytest = "^7.1.2"
+toml = "^0.10.2"
+pylint = "^2.15.0"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pylint]
+max-line-length = 120
