--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^5.0.4"
 pytest = "^7.1.2"
 toml = "^0.10.2"
 pylint = "^2.15.0"
+wanakana-python = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 
