kana-table もうすぐ

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ wanakana-python = "^1.2.2"
 pdfminer = "^20191125"
 "pdfminer.six" = "^20221105"
 pandas = "^2.1.0"
+Jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.991"
