okin2yamato 本文split 改善

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pylint]
 max-line-length = 120
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
