--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Hisanobu Nkamaura"]
 [tool.poetry.dependencies]
 python = "^3.10"
 wanakana-python = "^1.2.2"
+click = "^8.1.7"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.991"
